# EdgePilot

./: .gitignore  Makefile  README.md  docker-compose.monitoring.yml  pyproject.toml
.github/workflows/: ci.yml
eval/: harness.py  scenarios.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: edgepilot.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
src/edgepilot/: __init__.py  __main__.py  audio.py  logging_config.py  main.py  voice_loop.py
src/edgepilot/executors/: base.py  flaky_executor.py  get_time.py  registry.py  set_reminder.py  system_query.py
src/edgepilot/metrics/: collector.py
src/edgepilot/planner/: base.py  ollama_planner.py
src/edgepilot/recovery/: controller.py
src/edgepilot/stt/: base.py  whisper_stt.py
src/edgepilot/tts/: base.py  piper_tts.py
src/edgepilot/validation/: gate.py
tests/: test_eval.py  test_logging.py  test_metrics.py  test_planner.py  test_recovery.py  test_registry.py  test_stt.py  test_tts.py  test_validation.py  test_voice_loop.py
