[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgepilot"
version = "0.1.0"
description = "A fully local, privacy-preserving multi-agent voice assistant with typed executors and adaptive recovery."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "pydantic==2.11.3",
    "httpx==0.28.1",
    "prometheus-client==0.22.1",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.1.1",
    "piper-tts>=1.2.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "ruff==0.11.13",
    "mypy==1.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/edgepilot"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
